Fix layout issue in smaller smartphone devices and some SCSS refactoring

--- a/src/styles/Headline.module.scss
+++ b/src/styles/Headline.module.scss
@@ -7,7 +7,7 @@ h1.title {
     margin-block-start: 0;
     margin-block-end: 0;
 
-    @media (max-width: 768px) {
+    @include query (mobile) {
         font-size: $custom-font-size-x-large;
     }
 }
