--- a/src/styles/Index.module.scss
+++ b/src/styles/Index.module.scss
@@ -1,22 +1,8 @@
+@import "variables.module.scss";
+
 // $gap : 4vh;
 // // $padding : 4vh;
 // // $color : #48CAE4;
-
-// Break points
-$bp : (
-  mobile : 480px,
-  tablet : 768px,
-  desktop : 1440px,
-);
- 
-// Conditional media query mixins
-@mixin query($display) {
-  @each $key, $value in $bp { 
-    @if ($display == $key){
-      @media (max-width: $value){ @content; }
-    }
-  }
-}
 
 .content {
   max-height: 97vh;
@@ -69,7 +55,7 @@ $bp : (
   }
 
   @include query (mobile) {
-    min-width: 300px;
+    min-width: 410px;
   }
 }
 
