--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -1,5 +1,21 @@
 // Variables to be imported in component SCSS files
 
+// Break points
+$bp : (
+  mobile : 480px,
+  tablet : 768px,
+  desktop : 1440px,
+);
+ 
+// Conditional media query mixins
+@mixin query ($display) {
+  @each $key, $value in $bp { 
+    @if ($display == $key){
+      @media (max-width: $value){ @content; }
+    }
+  }
+}
+
 $custom-font-size-normal: 1rem;
 $custom-font-size-large: 1.5rem;
 $custom-font-size-x-large: 1.8rem;
